--- a/Calculator/Calculator.vcxproj.filters
+++ b/Calculator/Calculator.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="HugeInt.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Complex.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Matrix.cpp">
@@ -39,6 +42,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="HugeInt.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Complex.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
